Custom--app/main/default/objects/Zip_code_reference__c/Zip_code_reference__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Get the market, submarket and Location score from zip code</description>
    <label>Zip Code Reference</label>
</CustomObject>