Custom--app/main/default/objects/Zip_code_reference__c/fields/LocationScore__c.field-meta.xml
<CustomField>
    <fullName>LocationScore__c</fullName>
    <label>LocationScore</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>