Custom--app/main/default/objects/Zip_code_reference__c/fields/Market2__c.field-meta.xml
<CustomField>
    <fullName>Market2__c</fullName>
    <label>Market2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>