Custom--app/main/default/objects/Zip_code_reference__c/fields/SubMarket__c.field-meta.xml
<CustomField>
    <fullName>SubMarket__c</fullName>
    <label>SubMarket</label>
    <length>255</length>
    <type>Text</type>
</CustomField>